# medical-ocr-ground-truth

./: .gitignore  BENCHMARK_REPORT_588.md  CONTRIBUTING.md  DATASETS_POLICY.md  DATASET_CARD.md  INTEGRATION_GUIDE_GUI.md  README.md  README_GROUND_TRUTH_SYSTEM.md  RELEASES.md  arabic_medical_dict_v1.json  benchmark_results_588.json  font_glyph_validator.py  ground_truth_588.txt  gt_comparison_engine.py  import_ground_truth_v1.py  medical_doc_gui_patch_v1.py  ocr_benchmark_v1.py  ocr_snippet_trainer.py  requirements_ground_truth.txt  run_full_pipeline.py  snippet_cli.py  snippet_review_ui.py  training_pipeline_manager.py  validate_dataset.py
.github/workflows/: dispatch-benchmarks.yml
tools/ocr-groundtruth/: .gitignore  README_TOOL.md  pyproject.toml
tools/ocr-groundtruth/src/ocr_groundtruth/: __init__.py  alignment.py  cli.py  evaluate.py  groundtruth_builder.py  pdf_extractor.py
tools/ocr-groundtruth/tests/: test_ocr_groundtruth.py
