[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-groundtruth"
version = "1.0.0"
description = "Build verified OCR ground truth from ABBYY FineReader + Readiris, evaluate your own engines with real CER/WER"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "DrAbdulmalek" }]
requires-python = ">=3.9"

dependencies = [
    "PyMuPDF>=1.23",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.scripts]
ocr-groundtruth = "ocr_groundtruth.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
